cambiano nome ad un plugin aggiunti test case fino a copertura del 51,1% del codice

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tests/testfiles"/>
+	<classpathentry kind="src" path="tests/src-test"/>
 	<classpathentry kind="src" path="xslt"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="stdlib/axis.jar"/>
