--- a/.classpath
+++ b/.classpath
@@ -29,7 +29,6 @@
 	<classpathentry kind="lib" path="stdlib/freehep-xml-2.1.1.jar"/>
 	<classpathentry kind="lib" path="stdlib/jargs.jar"/>
 	<classpathentry kind="lib" path="stdlib/jas-plotter-2.2.jar"/>
-	<classpathentry kind="lib" path="stdlib/jbpt-0.2.77.jar"/>
 	<classpathentry kind="lib" path="stdlib/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="stdlib/jdom-1.0.jar"/>
 	<classpathentry kind="lib" path="stdlib/jfreechart-1.0.13.jar"/>
@@ -41,7 +40,6 @@
 	<classpathentry kind="lib" path="stdlib/jung-io-2.0.jar"/>
 	<classpathentry kind="lib" path="stdlib/jung-visualization-2.0.jar"/>
 	<classpathentry kind="lib" path="stdlib/junit-3.8.2.jar"/>
-	<classpathentry kind="lib" path="stdlib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="stdlib/junit-4.8.1.jar"/>
 	<classpathentry kind="lib" path="stdlib/openide-lookup-1.9-patched-1.0.jar"/>
 	<classpathentry kind="lib" path="stdlib/OpenXES-XStream.jar"/>
@@ -67,5 +65,6 @@
 	<classpathentry kind="lib" path="lib/saxon9he.jar"/>
 	<classpathentry kind="lib" path="packagelib/PetriNetReplayer.jar"/>
 	<classpathentry kind="lib" path="packagelib/InteractiveVisualization.jar"/>
+	<classpathentry kind="lib" path="stdlib/EfficientStorage.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
